--- a/src/styles/meditor.scss
+++ b/src/styles/meditor.scss
@@ -3,7 +3,7 @@
 
 /* Bourbon
  */
-@import "../bower_components/bourbon/app/assets/stylesheets/bourbon";
+@import "../../node_modules/bourbon/app/assets/stylesheets/_bourbon.scss";
 
 /* Utils
  */
